--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="./node_modules/d3/dist/d3.min.js"></script>
+    <!--<script src="./node_modules/d3/dist/d3.min.js"></script>-->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
   </head>
   <body>
     <script type="module" src="index.js"></script>
